# TeNeT

./: Cargo.toml  README.md  coverage-thresholds.json
benchmarks/: README.md  issue_118_audit.sh  issue_118_warm_cache.md  issue_124_allocation_evidence.md  operation_matrix.md  (+6 more)
tenet/: Cargo.toml
tenet-core/: Cargo.toml
tenet-core/benches/: fusion_tree_key.rs
tenet-core/examples/: fusion_space_hot_path.rs  homspace_identity_churn.rs  issue_245_layout_cache.rs
tenet-core/src/: block_structure.rs  category_vocabulary.rs  core_rule_bridge.rs  error.rs  fusion_rule.rs  fusion_space.rs  fusion_tree.rs  lib.rs  sector.rs  space.rs  storage.rs  su2_exact.rs  su3.rs  tensor_map.rs  tests.rs
tenet-core/tests/: core_rule_bridge_compat.rs  identity_transform_allocations.rs  rule_identity.rs  sector_vocabulary_compat.rs  semantic_axioms.rs
tenet-dense/: Cargo.toml
tenet-dense/src/: cuda_adapter.rs  dot.rs  dtype.rs  error.rs  executor.rs  layout.rs  lib.rs  scalar.rs  strided_adapter.rs  tenferro_adapter.rs  tensor.rs  tests.rs  view.rs
tenet-matrixalgebra/: Cargo.toml
tenet-matrixalgebra/examples/: issue19_block_sparse_diag.rs  tsvd_crosscheck.rs
tenet-matrixalgebra/src/: compose.rs  factorize.rs  lib.rs  matrix_functions.rs  tests.rs  truncation.rs
tenet-network/: Cargo.toml
tenet-network/examples/: microbench_cached_network.rs
tenet-network/src/: bitset_dp.rs  cost.rs  cotengra_python.rs  error.rs  ir.rs  labels.rs  lib.rs  network.rs  optimizer.rs  parse.rs  pathopt.rs  plan.rs  plancache.rs  slice.rs  tree.rs
tenet-network/tests/: intermediate_allocations.rs  optimizer_fallback.rs  plan_cache.rs  tensor_macro.rs  trace_macro.rs
tenet-operations/: Cargo.toml
tenet-operations/benches/: permute_u1_many.rs  strided_combine.rs
tenet-operations/benchmarks/: tensorkit_contract_adjoint_oracles.jl  tensorkit_fusion_context.jl
tenet-operations/examples/: fusion_contract_context_timing.rs  fusion_su2_diagnostic.rs  microbench_fusion.rs  structure_hot_path.rs  tree_transform_replay_timing.rs  tsvd_crosscheck.rs
tenet-operations/src/: adjoint.rs  axis.rs  backend.rs  cache.rs  contract.rs  cuda.rs  error.rs  facade.rs  factorize.rs  fusion_replay.rs  host_kernels.rs  host_scalar_kernels.rs  host_scratch.rs  kernel_adapter.rs  lib.rs  owned_cat.rs  owned_overwrite_buffer.rs  owned_trace.rs  profile.rs  replay_backend.rs  scalar.rs  storage_scratch.rs  strided.rs  structure_identity.rs  tensoradd.rs  tensortrace.rs  tests.rs  transform_helpers.rs  transform_key.rs  transform_plan.rs  transform_replay.rs  transform_structure.rs  tree_context.rs  tree_profile.rs  tree_structure.rs  tree_transform.rs
tenet-operations/src/contract/: api.rs  backend.rs  context.rs  dynamic.rs  dynamic_space.rs  dynamic_space_cache.rs  fusion.rs  fusion_block.rs  mod.rs  profile.rs  scratch.rs  structure.rs
tenet-operations/src/contract/fusion/: block_specs.rs  plan.rs
tenet-operations/src/tests/: contract_dense.rs  contract_fusion.rs  factorize.rs  mod.rs  tensoradd.rs  tensortrace.rs  tree_transform_exec.rs  tree_transform_plan.rs
tenet-operations/src/tree_transform/: cache.rs  operation.rs  plan.rs
tenet-operations/tests/: bench_41_probe.rs  delegate_raw_copy_allocations.rs  fusion_group_replay_allocations.rs  owned_trace_allocations.rs  owned_transform_allocations.rs  threaded_schedule_allocations.rs  tree_transform_compile_allocations.rs
tenet-tensors/: Cargo.toml
tenet-tensors/benchmarks/: tensorkit_contract_adjoint_oracles.jl  tensorkit_fusion_context.jl  tensorkit_tensortrace_oracles.jl
tenet-tensors/examples/: fusion_contract_context_timing.rs  fusion_su2_diagnostic.rs  microbench_fusion.rs  structure_hot_path.rs  tree_transform_replay_timing.rs
tenet-tensors/src/: adjoint.rs  axis.rs  backend.rs  backend_trace.rs  cache.rs  facade.rs  host_kernels.rs  host_scratch.rs  kernel_adapter.rs  lib.rs  lowering.rs  placement.rs  storage_scratch.rs  strided.rs  structure_identity.rs  tensoradd.rs  tensortrace.rs  test_support.rs  tree_context.rs  tree_structure.rs  tree_transform.rs
tenet-tensors/src/contract/: api.rs  backend.rs  context.rs  dynamic.rs  dynamic_space.rs  fusion.rs  fusion_block.rs  mod.rs  resolution.rs  route_cache.rs  scratch.rs  structure.rs
tenet-tensors/src/contract/fusion/: block_specs.rs  plan.rs
tenet-tensors/src/tests/: contract_dense.rs  contract_fusion.rs  copy.rs  mod.rs  subset_cross_operations.rs  tensoradd.rs  tensortrace.rs  tree_transform_exec.rs  tree_transform_plan.rs
tenet-tensors/src/tests/fixtures/: issue306_tensorkit_unique_oracle.jl  issue306_tensorkit_unique_oracle.txt
tenet-tensors/src/tree_transform/: cache.rs  helpers.rs  operation.rs  plan.rs
tenet-tensors/src/tree_transform/fixtures/: base_87065ed_categorical_matrix_v2.hex
tenet-tensors/tests/: lowered_complete_cache_preflight.rs  lowered_final_single_pass_allocations.rs  lowered_transaction_allocations.rs  rule_identity_boundary.rs  tree_transform_compile_allocations.rs
tenet/examples/: adjoint_timing.rs  inner_norm_timing.rs  itebd_heisenberg.rs  matrix_fn_timing.rs  thread_scaling.rs
tenet/src/: error.rs  lib.rs  mathematics.md  plancache.rs  runtime.rs  space.rs  tensor.rs  tutorial.md
tenet/src/tensor/: compact_diagonal_tests.rs  diagonal.rs
tenet/tests/: absorb.rs  absorb_allocations.rs  adjoint_view_allocations.rs  backend_selection.rs  cat_allocations.rs  compact_diagonal_allocations.rs  compose_direct.rs  contract_ordered_allocations.rs  contract_ordered_semantics.rs  default_runtime.rs  destination_ops.rs  dtype_placement_panic_firewall.rs  inner_norm_allocations.rs  itebd_smoke.rs  linalg_backend.rs  permute_overwrite_allocations.rs  prelude_key_compat.rs  refute_b3c1_om_layout.rs  refute_b3c2_canonicalization.rs  repartition_allocations.rs  semantic_suite.rs  shared_runtime_parallel.rs  su3_b3c2_gates.rs  su3_factorize.rs  su3_panic_firewall.rs  tk_fermionic_correspondence.rs  tk_su3_correspondence.rs  transpose_backend.rs  user_api.rs  user_c64.rs  user_cuda.rs  user_decomp.rs  user_su3.rs
tools/cotengra-python/: README.md  pyproject.toml
(+43 files in other folders)
