[workspace]
members = ["tenet", "tenet-core", "tenet-dense", "tenet-krylov", "tenet-macros", "tenet-matrixalgebra", "tenet-network", "tenet-operations", "tenet-sectors", "tenet-tensors"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/tensornetworks"

