[package]
name = "tenet-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_core"
path = "src/lib.rs"

[dependencies]
smallvec = { version = "1", features = ["const_generics", "union"] }
# Fast non-cryptographic hasher for internal maps keyed on fusion-tree /
# block structure (small integer sequences, no untrusted input) — the Rust
# analog of Julia's fast `Dict` hash; std's SipHash is needlessly slow here.
rustc-hash = "2"
