[package]
name = "tenet-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_core"
path = "src/lib.rs"

[dependencies]
smallvec = { version = "1", features = ["const_generics", "union"] }
# Fast non-cryptographic hasher for internal maps keyed on fusion-tree /
# block structure (small integer sequences, no untrusted input) — the Rust
# analog of Julia's fast `Dict` hash; std's SipHash is needlessly slow here.
rustc-hash = "2"
lru = "0.12"
# Anyonic fusion-rule providers (e.g. FibonacciAnyon) need a genuine complex
# `Scalar` for the recoupling engine's F/R symbols — version matches the
# other workspace crates that already depend on it (tenet, tenet-dense, ...).
num-complex = "0.4"

[dev-dependencies]
# Zero-cost-claim canary (#153): a tiny hash/eq microbench for the
# mult-free `FusionTreeKey` path (see benches/fusion_tree_key.rs; the
# companion `size_of` assert lives in src/tests.rs, next to the type it
# pins). Only pulled in for `cargo bench`, never a normal build.
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "fusion_tree_key"
harness = false
