[package]
name = "tenet-dense"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_dense"
path = "src/lib.rs"

[features]
default = ["tenferro"]
tenferro = [
    "dep:tenferro-cpu",
    "dep:tenferro-linalg",
    "dep:tenferro-tensor",
    "dep:strided-einsum2",
    "tenferro-cpu/cpu-faer",
    "tenferro-linalg/cpu-faer",
    "strided-einsum2/faer",
    "strided-einsum2/parallel",
]

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
strided-einsum2 = { git = "https://github.com/Ryo-wtnb11/strided-rs", rev = "bd6d0775b17b83eff19b0f1b3825059bb6ee66c7", version = "0.1.0", default-features = false, optional = true }
tenferro-cpu = { path = "../../tenferro-rs/crates/tenferro-cpu", default-features = false, optional = true }
tenferro-linalg = { path = "../../tenferro-rs/crates/tenferro-linalg", default-features = false, optional = true }
tenferro-tensor = { path = "../../tenferro-rs/crates/tenferro-tensor", default-features = false, optional = true }
