[package]
name = "tenet-dense"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_dense"
path = "src/lib.rs"

[features]
default = ["cpu-faer"]
tenferro = [
    "dep:tenferro-cpu",
    "dep:tenferro-linalg",
    "dep:tenferro-tensor",
]
cpu-faer = [
    "tenferro",
    "tenferro-cpu/cpu-faer",
    "tenferro-linalg/cpu-faer",
]
cpu-blas-core = [
    "tenferro",
    "tenferro-cpu/cpu-blas",
    "tenferro-linalg/cpu-blas",
]
cpu-blas = [
    "cpu-blas-core",
]
blas-accelerate = [
    "cpu-blas-core",
    "tenferro-cpu/blas-accelerate",
    "tenferro-linalg/blas-accelerate",
]
blas-openblas = [
    "cpu-blas-core",
    "tenferro-cpu/blas-openblas",
    "tenferro-linalg/blas-openblas",
]
blas-mkl = [
    "cpu-blas-core",
    "tenferro-cpu/blas-mkl",
    "tenferro-linalg/blas-mkl",
]
cuda = [
    "tenferro",
    "dep:tenferro-gpu",
    "tenferro-gpu/cuda",
]
provider-inject = [
    "cpu-blas-core",
    "tenferro-cpu/provider-inject",
    "tenferro-linalg/provider-inject",
]

[dependencies]
num-complex = "0.4"
tenferro-cpu = { path = "../../tenferro-rs/crates/tenferro-cpu", default-features = false, optional = true }
tenferro-linalg = { path = "../../tenferro-rs/crates/tenferro-linalg", default-features = false, optional = true }
tenferro-tensor = { path = "../../tenferro-rs/crates/tenferro-tensor", default-features = false, optional = true }
tenferro-gpu = { path = "../../tenferro-rs/crates/tenferro-gpu", default-features = false, optional = true }
