[package]
name = "tenet-matrixalgebra"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tenet-core = { path = "../tenet-core" }
tenet-dense = { path = "../tenet-dense", default-features = false }
tenet-operations = { path = "../tenet-operations", default-features = false }
num-complex = "0.4"
num-traits = "0.2"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer", "tenet-operations/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas", "tenet-operations/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate", "tenet-operations/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas", "tenet-operations/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl", "tenet-operations/blas-mkl"]
