[package]
name = "tenet-matrixalgebra"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tenet-core = { path = "../tenet-core" }
tenet-dense = { path = "../tenet-dense", default-features = false }
tenet-tensors = { path = "../tenet-tensors", default-features = false }
num-complex = "0.4"
num-traits = "0.2"
lru = "0.12"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer", "tenet-tensors/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas", "tenet-tensors/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate", "tenet-tensors/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas", "tenet-tensors/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl", "tenet-tensors/blas-mkl"]
# Routes per-sector SVD/eigh (the DenseExecutor boundary) to the tenferro CUDA
# backend (cuBLAS/cuSOLVER). Necessary but NOT sufficient for GPU finite-torus:
# the recoupling replay still runs through the host-only StridedHostKernelAdapter
# (see tenet-operations kernel_adapter.rs: "Device replay needs a separate" path).
cuda = ["tenet-dense/cuda", "tenet-tensors/cuda"]
diagnostics = []

[[example]]
name = "issue19_block_sparse_diag"
required-features = ["diagnostics"]
