[package]
name = "tenet-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_network"
path = "src/lib.rs"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet/cpu-faer"]
cpu-blas = ["tenet/cpu-blas"]
blas-accelerate = ["tenet/blas-accelerate"]
blas-openblas = ["tenet/blas-openblas"]
blas-mkl = ["tenet/blas-mkl"]
provider-inject = ["tenet/provider-inject"]
# Wraps the `opt-einsum-path` crate (Apache-2.0) as a
# `DenseContractionOptimizer` backend (optimal / dp / branch / random-greedy).
opt-path = ["dep:opt-einsum-path", "tenet/opt-path"]

[dependencies]
tenet = { path = "../tenet", default-features = false }
tenet-macros = { path = "../tenet-macros" }
opt-einsum-path = { version = "0.2", optional = true }
# O(1) LRU (HashMap + intrusive linked list), the Rust analog of the
# `LRUCache.jl` that TensorKit uses for its global caches. Replaces the
# linear-scan `VecDeque` LRU whose touch was O(capacity) per plan-cache hit.
lru = "0.12"
