[package]
name = "tenet-operations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tenet-core = { path = "../tenet-core" }
tenet-dense = { path = "../tenet-dense", default-features = false }
num-complex = "0.4"
num-traits = "0.2"
strided-kernel = { version = "0.3", features = ["parallel"] }

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl"]
provider-inject = ["tenet-dense/provider-inject"]
cuda = ["tenet-dense/cuda"]
