[package]
name = "tenet-operations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tenet-core = { path = "../tenet-core" }
tenet-dense = { path = "../tenet-dense", default-features = false }
num-complex = "0.4"
num-traits = "0.2"
strided-kernel = { version = "0.3", features = ["parallel"] }
# Tree-transform replay parallelism drives rayon's global pool directly:
# strided-kernel's unconditional "parallel" feature above already pulls
# rayon into every build and runs its own threaded kernels on the same
# global pool, so this adds no dependency weight and keeps ONE CPU pool
# for all strided/transform work. strided-kernel exposes no public pool
# or scope API to route through; if it grows one, switch to it.
rayon = "1.10"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl"]
provider-inject = ["tenet-dense/provider-inject"]
cuda = ["tenet-dense/cuda"]
