[package]
name = "tenet-tensors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet_tensors"
path = "src/lib.rs"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer", "tenet-operations/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas", "tenet-operations/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate", "tenet-operations/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas", "tenet-operations/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl", "tenet-operations/blas-mkl"]
provider-inject = ["tenet-dense/provider-inject", "tenet-operations/provider-inject"]
cuda = ["tenet-dense/cuda", "tenet-operations/cuda"]

[dependencies]
tenet-core = { path = "../tenet-core" }
tenet-operations = { path = "../tenet-operations", default-features = false }
tenet-dense = { path = "../tenet-dense", default-features = false }
strided-kernel = { version = "0.3", features = ["parallel"] }
# Parallel tree-transform plan compile runs on rayon's global pool — the
# same pool strided-kernel's "parallel" feature already installs, so this
# adds no dependency weight and keeps ONE CPU pool (see tenet-operations).
rayon = "1.10"
num-traits = "0.2"
num-complex = "0.4"
