[package]
name = "tenet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tenet"
path = "src/lib.rs"

[features]
default = ["cpu-faer"]
cpu-faer = ["tenet-dense/cpu-faer", "tenet-tensors/cpu-faer", "tenet-matrixalgebra/cpu-faer"]
cpu-blas = ["tenet-dense/cpu-blas", "tenet-tensors/cpu-blas", "tenet-matrixalgebra/cpu-blas"]
blas-accelerate = ["tenet-dense/blas-accelerate", "tenet-tensors/blas-accelerate", "tenet-matrixalgebra/blas-accelerate"]
blas-openblas = ["tenet-dense/blas-openblas", "tenet-tensors/blas-openblas", "tenet-matrixalgebra/blas-openblas"]
blas-mkl = ["tenet-dense/blas-mkl", "tenet-tensors/blas-mkl", "tenet-matrixalgebra/blas-mkl"]
provider-inject = ["tenet-dense/provider-inject", "tenet-tensors/provider-inject"]
cuda = ["tenet-dense/cuda", "tenet-tensors/cuda"]
# Marker only: adds the Optimizer::Optimal variant; the search itself lives
# in tenet-network (whose opt-path feature enables this one).
opt-path = []
# Marker only: adds the Optimizer::CotengraPython variant; the subprocess
# planner itself lives in tenet-network.
cotengra-python = []

[dependencies]
num-complex = "0.4"
rayon = "1.10"
tenet-core = { path = "../tenet-core" }
tenet-dense = { path = "../tenet-dense", default-features = false }
tenet-matrixalgebra = { path = "../tenet-matrixalgebra", default-features = false }
tenet-tensors = { path = "../tenet-tensors", default-features = false }

[dev-dependencies]
# Dev-only cycle (tenet-network depends on tenet): lets the tutorial's
# `tensor!` examples run as doctests of this crate.
tenet-network = { path = "../tenet-network", default-features = false }
