[project]
name = "tenet-cotengra-python"
version = "0.1.0"
description = "Python environment for TeNeT's optional cotengra planner backend."
requires-python = ">=3.10"
dependencies = [
    "cotengra>=0.7,<0.8",
    # Full hyper-optimizer quality: `kahypar` is cotengra's recommended
    # hypergraph partitioner, and `optuna` provides Bayesian hyper-parameter
    # sampling. Without them cotengra silently degrades the `hyper` method to
    # the basic `labels` partitioner and purely random sampling.
    "kahypar>=1.3",
    "optuna>=3.0",
]

[tool.uv]
package = false
